samples/_failures_safe/1761319119_8b5b73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3d2bff1.c: In function ‘main’:
./samples/SAFE/__tmp_b3d2bff1.c:156:21: error: expected expression at end of input
  156 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_b3d2bff1.c:156:21: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_b3d2bff1.c:60:6: note: declared here
   60 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_b3d2bff1.c:156:21: error: expected declaration or statement at end of input
  156 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_b3d2bff1.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b3d2bff1.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b3d2bff1.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b3d2bff1.c:156:21: error: expected declaration or statement at end of input
